Allow DomDistillerService to have no store.

We do not want storage or sync of distilled versions of page as we store
them in files with ReadingListItems.
Do not instantiate the store in ReadingList for iOS.

BUG=686402

Review-Url: https://codereview.chromium.org/2667533003
Cr-Commit-Position: refs/heads/master@{#447551}

Former-commit-id: b227a4e9a84a3faae02a125085a49906e1b4c54a